force-app/main/default/objects/Component__c/Component__c.object-meta.xml
<CustomObject>
    <description>The Component object is a part of the Manage Your Lifecycle App. This enables tracking at the component level (Object, Field, Trigger, etc.) and has relationships (either direct or via a junction object or two) to Component Versions, Features, Defects, Requirements, Test Cases, etc.</description>
    <label>Component</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Components</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>