force-app/main/default/objects/Component__c/fields/Byte_Length__c.field-meta.xml
<CustomField>
    <fullName>Byte_Length__c</fullName>
    <label>Byte Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>