force-app/main/default/objects/Component__c/fields/Calculated_Formula__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Formula__c</fullName>
    <description>Complete this field for Workflow Rules, Field Updates, Validation Rules, or Formula Fields</description>
    <inlineHelpText>Complete this field for Workflow Rules, Field Updates, Validation Rules, or Formula Fields</inlineHelpText>
    <label>Calculated Formula</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>