force-app/main/default/objects/Component__c/fields/Component_Type__c.field-meta.xml
<CustomField>
    <fullName>Component_Type__c</fullName>
    <description>The metadata type of the Component</description>
    <inlineHelpText>The metadata type of the Component</inlineHelpText>
    <label>Component Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Account Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Account Territory Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Action (includes object-oriented quick actions and global quick actions)</fullName>
            </value>
            <value>
                <fullName>Action Link Group Template</fullName>
            </value>
            <value>
                <fullName>Apex Class</fullName>
            </value>
            <value>
                <fullName>Apex Sharing Reason</fullName>
            </value>
            <value>
                <fullName>Apex Trigger</fullName>
            </value>
            <value>
                <fullName>App</fullName>
            </value>
            <value>
                <fullName>Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Assignment Rule Entry</fullName>
            </value>
            <value>
                <fullName>Auth. Provider</fullName>
            </value>
            <value>
                <fullName>Auto-Response Rule</fullName>
            </value>
            <value>
                <fullName>Auto-Response Rule Entry</fullName>
            </value>
            <value>
                <fullName>Button</fullName>
            </value>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Campaign Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Campaign Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Case Assignment Rule</fullName>
            </value>
            <value>
                <fullName>Case Auto-Response</fullName>
            </value>
            <value>
                <fullName>Case Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Case Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Communities (Zones)</fullName>
            </value>
            <value>
                <fullName>Compact Layout</fullName>
            </value>
            <value>
                <fullName>Console App</fullName>
            </value>
            <value>
                <fullName>Contact Criteria Based Sharing Rule</fullName>
            </value>
            <value>
                <fullName>Contact Owner Sharing Rule</fullName>
            </value>
            <value>
                <fullName>CORS Whitelist Origin</fullName>
            </value>
            <value>
                <fullName>Country/Territory Changelist Entry</fullName>
            </value>
            <value>
                <fullName>Country/Territory Picklist</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>