force-app/main/default/objects/Component__c/fields/Component_Versions_Count__c.field-meta.xml
<CustomField>
    <fullName>Component_Versions_Count__c</fullName>
    <label>Component Versions Count</label>
    <summaryForeignKey>Component_Version__c.Component__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>