force-app/main/default/objects/Component__c/fields/Controller__c.field-meta.xml
<CustomField>
    <fullName>Controller__c</fullName>
    <description>If this is a controlled field, which field is the controller?</description>
    <label>Controller</label>
    <length>255</length>
    <type>Text</type>
</CustomField>