force-app/main/default/objects/Component__c/fields/Custom_Object__c.field-meta.xml
<CustomField>
    <fullName>Custom_Object__c</fullName>
    <description>If this component is associated with a custom object, list it here.</description>
    <inlineHelpText>If this component is associated with a custom object, list it here.</inlineHelpText>
    <label>Custom Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>