force-app/main/default/objects/Component__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <inlineHelpText>What is the purpose of this component? What business problem does it solve? How does it function? If this is a field, is it populated manually or via automation? Describe the data type or other attributes of the component.</inlineHelpText>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>