force-app/main/default/objects/Component__c/fields/Digits__c.field-meta.xml
<CustomField>
    <fullName>Digits__c</fullName>
    <label>Digits</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>