force-app/main/default/objects/Component__c/fields/Inline_Help_Text__c.field-meta.xml
<CustomField>
    <fullName>Inline_Help_Text__c</fullName>
    <label>Inline Help Text</label>
    <type>TextArea</type>
</CustomField>