force-app/main/default/objects/Component__c/fields/isAccessible__c.field-meta.xml
<CustomField>
    <fullName>isAccessible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isAccessible</label>
    <type>Checkbox</type>
</CustomField>