force-app/main/default/objects/Component__c/fields/isAutoNumber__c.field-meta.xml
<CustomField>
    <fullName>isAutoNumber__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAutoNumber</label>
    <type>Checkbox</type>
</CustomField>