force-app/main/default/objects/Component__c/fields/isCreateable__c.field-meta.xml
<CustomField>
    <fullName>isCreateable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreateable</label>
    <type>Checkbox</type>
</CustomField>