force-app/main/default/objects/Component__c/fields/isCustom__c.field-meta.xml
<CustomField>
    <fullName>isCustom__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isCustom</label>
    <type>Checkbox</type>
</CustomField>