force-app/main/default/objects/Component__c/fields/isDefaultedOnCreate__c.field-meta.xml
<CustomField>
    <fullName>isDefaultedOnCreate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDefaultedOnCreate</label>
    <type>Checkbox</type>
</CustomField>