force-app/main/default/objects/Component__c/fields/isDependantPicklist__c.field-meta.xml
<CustomField>
    <fullName>isDependantPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isDependantPicklist</label>
    <type>Checkbox</type>
</CustomField>