force-app/main/default/objects/Component__c/fields/isFilterable__c.field-meta.xml
<CustomField>
    <fullName>isFilterable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isFilterable</label>
    <type>Checkbox</type>
</CustomField>