force-app/main/default/objects/Component__c/fields/isIdLookup__c.field-meta.xml
<CustomField>
    <fullName>isIdLookup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isIdLookup</label>
    <type>Checkbox</type>
</CustomField>