force-app/main/default/objects/Component__c/fields/isNamePointing__c.field-meta.xml
<CustomField>
    <fullName>isNamePointing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isNamePointing</label>
    <type>Checkbox</type>
</CustomField>