force-app/main/default/objects/Component__c/fields/isNullable__c.field-meta.xml
<CustomField>
    <fullName>isNullable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isNullable</label>
    <type>Checkbox</type>
</CustomField>