force-app/main/default/objects/Component__c/fields/isRequiredField__c.field-meta.xml
<CustomField>
    <fullName>isRequiredField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRequiredField</label>
    <type>Checkbox</type>
</CustomField>