force-app/main/default/objects/Component__c/fields/isRestrictedPicklist__c.field-meta.xml
<CustomField>
    <fullName>isRestrictedPicklist__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRestrictedPicklist</label>
    <type>Checkbox</type>
</CustomField>