force-app/main/default/objects/Component__c/fields/isSortable__c.field-meta.xml
<CustomField>
    <fullName>isSortable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isSortable</label>
    <type>Checkbox</type>
</CustomField>