force-app/main/default/objects/Component__c/fields/isUpdateable__c.field-meta.xml
<CustomField>
    <fullName>isUpdateable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isUpdateable</label>
    <type>Checkbox</type>
</CustomField>