force-app/main/default/objects/Component__c/fields/Length__c.field-meta.xml
<CustomField>
    <fullName>Length__c</fullName>
    <label>Length</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>