force-app/main/default/objects/Component__c/fields/Precision__c.field-meta.xml
<CustomField>
    <fullName>Precision__c</fullName>
    <label>Precision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>