force-app/main/default/objects/Component__c/fields/Reference_To__c.field-meta.xml
<CustomField>
    <fullName>Reference_To__c</fullName>
    <label>Reference To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>