force-app/main/default/objects/Component__c/fields/SOAP_Type__c.field-meta.xml
<CustomField>
    <fullName>SOAP_Type__c</fullName>
    <label>SOAP Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>