force-app/main/default/objects/Component__c/fields/Standard_Object__c.field-meta.xml
<CustomField>
    <fullName>Standard_Object__c</fullName>
    <description>If this component is associated with a standard object, select it here.</description>
    <inlineHelpText>If this component is associated with a standard object, select it here.</inlineHelpText>
    <label>Standard Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>AccountInvoice__c</fullName>
            </value>
            <value>
                <fullName>AccountInvoiceDetail__c</fullName>
            </value>
            <value>
                <fullName>AccountPayment__c</fullName>
            </value>
            <value>
                <fullName>AccountPublication__c</fullName>
            </value>
            <value>
                <fullName>AccountPublicationEvent__c</fullName>
            </value>
            <value>
                <fullName>AccountPublicationRate__c</fullName>
            </value>
            <value>
                <fullName>AccountPublicationRoute__c</fullName>
            </value>
            <value>
                <fullName>AddressChange__c</fullName>
            </value>
            <value>
                <fullName>Alert__c</fullName>
            </value>
            <value>
                <fullName>BonusDay__c</fullName>
            </value>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Code__c</fullName>
            </value>
            <value>
                <fullName>Component__c</fullName>
            </value>
            <value>
                <fullName>Component_Version__c</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Defect_Link__c</fullName>
            </value>
            <value>
                <fullName>Delete_History__c</fullName>
            </value>
            <value>
                <fullName>Draw__c</fullName>
            </value>
            <value>
                <fullName>DrawAdjustment__c</fullName>
            </value>
            <value>
                <fullName>DrawHistory__c</fullName>
            </value>
            <value>
                <fullName>DrawHistoryDetail__c</fullName>
            </value>
            <value>
                <fullName>DrawTemplate__c</fullName>
            </value>
            <value>
                <fullName>EmailMessage</fullName>
            </value>
            <value>
                <fullName>Environment__c</fullName>
            </value>
            <value>
                <fullName>Error_Log__c</fullName>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Feature__c</fullName>
            </value>
            <value>
                <fullName>InsertCredit__c</fullName>
            </value>
            <value>
                <fullName>Insertion__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>