force-app/main/default/objects/Component__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Delivered: Has been deployed to Production
Deprecated: Has been deployed and eventually deleted from Production</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>UAT</fullName>
            </value>
            <value>
                <fullName>Release Ready</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Deprecated</fullName>
            </value>
            <value>
                <fullName>Rolled back</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>