force-app/main/default/objects/Component__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Field data type</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BOOLEAN</fullName>
            </value>
            <value>
                <fullName>DATE</fullName>
            </value>
            <value>
                <fullName>DATETIME</fullName>
            </value>
            <value>
                <fullName>ID</fullName>
            </value>
            <value>
                <fullName>PICKLIST</fullName>
            </value>
            <value>
                <fullName>REFERENCE</fullName>
            </value>
            <value>
                <fullName>STRING</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>