force-app/main/default/objects/Component__c/recordTypes/Component.recordType-meta.xml
<RecordType>
    <fullName>Component</fullName>
    <active>true</active>
    <description>Select this record type for any non-field component (Apex Trigger, Page Layout, Process, etc.).</description>
    <label>Component</label>
</RecordType>