force-app/main/default/objects/Component__c/recordTypes/Field.recordType-meta.xml
<RecordType>
    <fullName>Field</fullName>
    <active>true</active>
    <description>Select this record type for any standard or custom field.</description>
    <label>Field</label>
</RecordType>