force-app/main/default/objects/Component__c/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Standard_Object__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Component__c.Field</value>
    </filters>
    <label>All Fields</label>
</ListView>