force-app/main/default/objects/Component__c/listViews/All_Non_Field_Components.listView-meta.xml
<ListView>
    <fullName>All_Non_Field_Components</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Standard_Object__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Component__c.Component</value>
    </filters>
    <label>All Non-Field Components</label>
</ListView>