force-app/main/default/objects/Component__c/listViews/All_Non_Fields_with_Component_Versions.listView-meta.xml
<ListView>
    <fullName>All_Non_Fields_with_Component_Versions</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Standard_Object__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Component_Versions_Count__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Versions_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Component__c.Component</value>
    </filters>
    <label>All Non-Fields with Component Versions</label>
</ListView>