force-app/main/default/objects/Component__c/listViews/All_with_Component_Versions.listView-meta.xml
<ListView>
    <fullName>All_with_Component_Versions</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Standard_Object__c</columns>
    <columns>Description__c</columns>
    <columns>Status__c</columns>
    <columns>Created_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Versions_Count__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>All with Component Versions</label>
</ListView>