force-app/main/default/objects/Component__c/listViews/Other_Components.listView-meta.xml
<ListView>
    <fullName>Other_Components</fullName>
    <columns>NAME</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Other</value>
    </filters>
    <label>Other Components</label>
</ListView>