force-app/main/default/objects/Component__c/listViews/Profiles.listView-meta.xml
<ListView>
    <fullName>Profiles</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Status__c</columns>
    <columns>isCustom__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Profile</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Component__c.Component</value>
    </filters>
    <label>Profiles</label>
</ListView>