force-app/main/default/objects/Component__c/listViews/Sharing_Rules.listView-meta.xml
<ListView>
    <fullName>Sharing_Rules</fullName>
    <columns>NAME</columns>
    <columns>Component_Type__c</columns>
    <columns>Standard_Object__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>contains</operation>
        <value>Sharing</value>
    </filters>
    <label>Sharing Rules</label>
</ListView>