force-app/main/default/objects/Component__c/listViews/Workflow_Rules.listView-meta.xml
<ListView>
    <fullName>Workflow_Rules</fullName>
    <columns>NAME</columns>
    <columns>Calculated_Formula__c</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Component_Type__c</field>
        <operation>equals</operation>
        <value>Workflow Rule</value>
    </filters>
    <label>Workflow Rules</label>
</ListView>